--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -24,7 +24,7 @@
         max-width: 2rem;
         height: 2rem;
         vertical-align: text-bottom;
-        margin-right: 0.5rem;
+        margin-right: 0.35rem;
     }
 
     &--footer {
