--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -130,6 +130,7 @@
             position: relative;
             font-weight: $medium;
             font-size: 1.1rem;
+            font-family: $secondary-font;
 
             &:after {
                 position: absolute;
