--- a/assets/scss/components/_header-default.scss
+++ b/assets/scss/components/_header-default.scss
@@ -1,7 +1,8 @@
 .site-header {
     max-width: 77rem;
-    margin: 2rem auto 0;
-    padding: 1rem 1rem 0;
+    margin: 0 auto;
+    padding: 2.25rem 1rem 0;
+    background-color: $white;
 
     &__title {
         max-width: 35rem;
