--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -94,7 +94,7 @@
                 border-top: 4px solid $teal;
                 transition: 0.2s 0.15s ease-out;
                 background-color: $navy;
-                z-index: 10;
+                z-index: 15;
 
                 li {
                     margin-top: 0.65rem;
